# GenAI-lecture

./: .gitignore  Dockerfile  README.md  app.py  power_demand.db  power_demand_final.csv  pyproject.toml  test.ipynb
src/agents/: __init__.py  ml_engineer.py  sql_analyst.py  supervisor.py
src/utils/: __init__.py  graph_visualizer.py  mermaid_visualizer.py  sanitize.py
src/workflow/: __init__.py  state.py  workflow.py
