[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.21",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-upstage>=0.7.3",
    "langgraph>=0.6.7",
    "markdownify>=1.2.0",
    "numpy>=2.2.6",
    "openai>=1.107.1",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pi-heif>=1.1.0",
    "psycopg[binary]>=3.2.10",
    "pymupdf4llm>=0.0.27",
    "pytesseract>=0.3.13",
    "streamlit>=1.49.1",
    "tabula-py>=2.10.0",
    "tesseract>=0.1.3",
    "tqdm>=4.67.1",
    "unstructured>=0.18.14",
    "langsmith>=0.2.0",
    "torch>=2.0.0",
    "grandalf>=0.8",
    "matplotlib>=3.10.6",
    "langchain-core>=0.3.76",
    "langchain-teddynote>=0.5.1",
    "llama-parse>=0.6.69",
    "nest-asyncio>=1.6.0",
    "pymysql>=1.1.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "graphviz>=0.21",
    "langchain-openai>=0.2.11",
    "pyppeteer>=1.0.2",
]

